# Enzyme-Action-Optimizer-Extended

./: .coverage  .gitattributes  .gitignore  CONTRIBUTING.md  EAO.m  LICENSE  Main_CEC_2022_Functions.m  Main_Classical_23_Functions.m  Makefile  README.md  eao.py  eao_variants.py  enzyme_action_optimizer_extended-0.1.0-py3-none-any.whl  get_f.py  graficos.py  main.py  metricas.py  otros.py  pyproject.toml  requirements.txt
docs/: MIGRATION_TO_LFS.md
enzyme_action_optimizer_extended.egg-info/: PKG-INFO  SOURCES.txt
metaheuristics/: DE.py  EAODEHybrid.py  EAOECDynamic.py  EAOLFExploration.py  EAOLFPerturbation.py  EAOProbabilistic.py  FDA.py  GMO.py  GTO.py  GWO.py  HGSO.py  HLOA.py  MFO.py  MVO.py  PSO.py  SCA.py  SHO.py  WOA.py  WSO.py  eao.py
problems/SCP/: problem.py
problems/USCP/: problem.py
problems/continuous/: get_f.py
scripts/: build_release.ps1  build_release.py  build_release.sh  extract_problems_subtree.sh  prepare_lfs_migration.ps1  prepare_lfs_migration.sh  preview_problems_size.ps1  remove_problems_history.ps1  run.ps1  run_lfs_migration.ps1  setup_venv.ps1
utils/: __init__.py  eao_variants.py  get_f.py  helpers.py  metrics.py  plots.py
