[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enzyme-action-optimizer-extended"
version = "0.1.0"
description = "EAO - Enzyme Action Optimizer and comparison suite"
authors = [ { name = "BASTIAN STEFANO CUELLAR SALINAS" }, { name = "CAMILA ROXANA MUÑOZ CUYUL" }, { name = "MILENKA ORIANA ZUVIC PINOCHET" } ]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["metaheuristics*", "problems*", "utils*"]

[tool.setuptools]
py-modules = ["main"]
